Navbar, initial authenticator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<h3>Testando if e else</h3>
-
-@if(ehVerdadeira){
-  <span> É Coxinha</span>
-}@else{
-  <span>é falso</span>
-}
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
