service de recuperação do JWT token

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,4 @@
-
-<div class="container main">
+<div class="container main mt-4 text-center">
   <div class="container card login">
     <div class="card-body">
       <form>
