--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,7 @@
 <div class="container main mt-4 text-center">
+  <h1>Login</h1>
+  <div *ngIf="loginSuccess" class="alert alert-success">{{ loginSuccess }}</div>
+  <div *ngIf="loginError" class="alert alert-danger">{{ loginError }}</div>
   <div class="container card login">
     <div class="card-body">
       <form (ngSubmit)="onSubmit()">
@@ -8,7 +11,7 @@
         </div>
         <div class="form-group">
           <label for="password">Senha</label>
-          <input type="password" class="form-control" id="password" [(ngModel)]="password" required />
+          <input type="password" class="form-control" id="password" [(ngModel)]="password" name="password" required />
         </div>
         <button type="submit" class="btn btn-primary">Entrar</button>
       </form>
