--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,5 +5,6 @@
     <li><a routerLink="/login">Login</a></li>
     <li><a routerLink="/register">Register</a></li>
     <li><a routerLink="/dashboard">Dashboard</a></li>
+    <li><button (click)="logout()">Logout</button></li>
   </ul>
 </nav>
