--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar text-center">
   <ul class="nav-list">
-    <li><a style="font-weight: bolder;"  routerLink="/home">Home</a></li>
-    <li><a style="font-weight: bolder;" routerLink="/about">About</a></li>
+    <li *ngIf="!isLoggedIn()"><a style="font-weight: bolder;"  routerLink="/home">Home</a></li>
+    <li *ngIf="!isLoggedIn()"><a style="font-weight: bolder;" routerLink="/about">About</a></li>
 
     <li *ngIf="!isLoggedIn()"><a style="font-weight: bolder;" routerLink="/login">Login</a></li>
     <li *ngIf="!isLoggedIn()"><a style="font-weight: bolder;" routerLink="/register">Register</a></li>
