--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,25 @@
 <div class="container main mt-4 text-center">
   <h1>Register now, join us!!</h1>
+  <div *ngIf="registerSuccess" class="alert alert-success">{{ registerSuccess }}</div>
+  <div *ngIf="registerError" class="alert alert-danger">{{ registerError }}</div>
+  <div class="container card register">
+    <div class="card-body">
+      <form (ngSubmit)="register()">
+        <div class="form-group">
+          <label for="firstname">Primeiro Nome</label>
+          <input id="firstname" type="text" class="form-control" [(ngModel)]="formData.firstname" name="firstname" required />
+        </div>
+        <div class="form-group">
+          <label for="lastname">Último Nome</label>
+          <input id="lastname" type="text" class="form-control" [(ngModel)]="formData.lastname" name="lastname" required />
+        </div>
+        <div class="form-group">
+          <label for="cpf">CPF</label>
+          <input id="cpf" type="text" class="form-control" [(ngModel)]="formData.cpf" name="cpf" required />
+        </div>
+        <button type="submit" class="btn btn-primary">Registrar</button>
+      </form>
+    </div>
+  </div>
 </div>
 
