--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,6 +18,9 @@
             <td>{{ partner.firstname }}</td>
             <td>{{ partner.lastname }}</td>
             <td>{{ partner.cpf }}</td>
+            <td>
+              <button (click)="editPartner(partner.idpartner)">Editar</button>
+            </td>
           </tr>
         </tbody>
       </table>
