--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,3 +1,24 @@
 <div class="container main mt-4 text-center">
   <h1>Edit you informations</h1>
+  <div *ngIf="updateSucess" class="alert alert-success">{{ updateSucess }}</div>
+  <div *ngIf="updateError" class="alert alert-danger">{{ updateError }}</div>
+  <div class="card">
+    <div class="card-body">
+      <form (ngSubmit)="updatePartner()">
+        <div class="form-group">
+          <label for="firstname">Nome:</label>
+          <input type="text" class="form-control" id="firstname" [(ngModel)]="partner.firstname" name="firstname" required>
+        </div>
+        <div class="form-group">
+          <label for="lastname">Sobrenome:</label>
+          <input type="text" class="form-control" id="lastname" [(ngModel)]="partner.lastname" name="lastname" required>
+        </div>
+        <div class="form-group">
+          <label for="cpf">CPF:</label>
+          <input type="text" class="form-control" id="cpf" [(ngModel)]="partner.cpf" name="cpf" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Atualizar</button>
+      </form>
+    </div>
+  </div>
 </div>
