Criado um seletor para receber o tipo de parceiro (partnertype) nos formulários de edição e registro

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,6 +18,7 @@
             <td>{{ partner.firstname }}</td>
             <td>{{ partner.lastname }}</td>
             <td>{{ partner.cpf }}</td>
+            <td>{{ getPartnerTypeLabel(partner.partnertype) }}</td>
             <td>
              <button (click)="editPartner(partner.idpartner)">Editar</button>
             </td>
