--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -17,6 +17,13 @@
           <label for="cpf">CPF:</label>
           <input type="text" class="form-control" id="cpf" [(ngModel)]="partner.cpf" name="cpf" required>
         </div>
+        <div class="form-group">
+          <label for="partnertype">Tipo de Parceiro</label>
+          <select id="partnertype" class="form-control" [(ngModel)]="partner.partnertype" name="partnertype">
+            <option value="1">Gold</option>
+            <option value="2">Silver</option>
+          </select>
+        </div>
         <button type="submit" class="btn btn-primary">Atualizar</button>
       </form>
     </div>
