--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,16 +1,17 @@
 <div class="container main mt-4 text-center">
-  <h1>Dashboard</h1>
+  <h1>List of Partners</h1>
+  <div *ngIf="updateSucess" class="alert alert-success">{{ updateSucess }}</div>
+  <div *ngIf="deleteSucess" class="alert alert-success">{{ deleteSucess }}</div>
   <div class="card">
-    <div class="card-header">
-      Lista de Parceiros
-    </div>
     <div class="card-body">
       <table class="table">
         <thead>
           <tr>
-            <th scope="col">Nome</th>
-            <th scope="col">Sobrenome</th>
+            <th scope="col">First-Name</th>
+            <th scope="col">Last-Name</th>
             <th scope="col">CPF</th>
+            <th scope="col">Partner Type</th>
+            <th scope="col">Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -20,10 +21,9 @@
             <td>{{ partner.cpf }}</td>
             <td>{{ getPartnerTypeLabel(partner.partnertype) }}</td>
             <td>
-             <button (click)="editPartner(partner.idpartner)">Editar</button>
-            </td>
-            <td>
-              <button (click)="deletePartnerById(partner.idpartner)">Deletar</button>
+             <button (click)="editPartner(partner.idpartner)" class="btn btn-outline-dark btn-sm mt-3">Editar</button>
+
+              <button (click)="deletePartnerById(partner.idpartner)" class="btn btn-outline-danger btn-sm mt-3 ">Deletar</button>
             </td>
           </tr>
         </tbody>
